# dap-patternsearch-checker-service-standalone

./: .factorypath  .project  Dockerfile  README.md  dap-patternsearch-checker-cea.service  dap-patternsearch-checker.service  dockerUp.sh  docker_build.sh  mvn_package.sh  pom.xml
bigpiseal3.5.1/: CMakeLists.txt
bigpiseal3.5.1/native/examples/ANN/v1/: ANN_decrypt_v1.cpp  ANN_encrypt_v1.cpp  ANN_evaluate_v1 copy.cpp  ANN_evaluate_v1.cpp  ANN_genkey_v1.cpp  CMakeLists.txt  csv_api.cpp  csv_api.h  decrypt.sh  decrypt_result.sh  encrypt.sh  eval.sh  genkey.sh  ls.txt  print_api.cpp  print_api.h  seal_api.cpp  seal_api.h  test_v1.sh  util.h
bigpiseal3.5.1/native/examples/generic/: CMakeLists.txt  add.cpp  add.h  decrypt_gen.sh  encrypt_gen.sh  generic_decrypt.cpp  generic_encrypt.cpp  generic_evaluate.cpp  generic_evaluate_multiply.cpp  generic_evaluate_sub.cpp  generic_genkey.cpp  genkey_gen.sh  multiply.cpp  multiply.h  seal_api.cpp  seal_api.h  sub.cpp  sub.h
bigpiseal3.5.1/native/examples/hello/: CMakeLists.txt  add.cpp  add.h  hello_decrypt.cpp  hello_encrypt.cpp  hello_evaluate.cpp  hello_genkey.cpp  seal_api.cpp  seal_api.h
bigpiseal3.5.1/native/examples/patternSearch/v1/: CMakeLists.txt  decrypt.sh  decrypt_result.sh  encrypt.sh  patternSearch_decrypt.cpp  patternSearch_encrypt.cpp  patternSearch_encrypt_dev.cpp  patternSearch_evaluate.cpp  patternSearch_genkey.cpp  seal_api.cpp  test.sh  util.cpp
bigpiseal3.5.1/native/examples/patternSearch/v2/: CMakeLists.txt  eval.sh  genkey.sh  patternSearch_decrypt_result_v2.cpp  patternSearch_decrypt_v2.cpp  patternSearch_encrypt_v2.cpp  seal_api.cpp  test_v2.sh
bigpiseal3.5.1/native/examples/similarityMatch/v1/: CMakeLists.txt  decrypt.sh  decrypt_1st_result.sh  decrypt_result.sh  encrypt.sh  eval.sh  genkey.sh  seal_api.cpp  seal_api.h  similarityMatch_decrypt_1st_result.cpp  similarityMatch_decrypt_result.cpp  similarityMatch_encrypt.cpp  similarityMatch_evaluate.cpp  similarityMatch_genkey.cpp  test.sh
bigpiseal3.5.1/native/src/seal/util/: locks.h
datalake/: 1.dpo  3.dpo  4.dpo  5.dpo  clean.sh
src/docker/: Dockerfile  docker-compose.yml
src/main/docker/: docker-compose.yml  init.sql  init_db.sh
src/main/java/fr/cea/bigpi/fhe/dap/patternsearch/: Application.java
src/main/java/fr/cea/bigpi/fhe/dap/patternsearch/controller/: Controller.java  ControllerImpl.java  HomeController.java
src/main/java/fr/cea/bigpi/fhe/dap/patternsearch/fhe/: CommandExecution.java
src/main/java/fr/cea/bigpi/fhe/dap/patternsearch/helper/: Tools.java  ToolsError.java  Zip.java
src/main/java/fr/cea/bigpi/fhe/dap/patternsearch/message/: ResponseMessage.java
src/main/java/fr/cea/bigpi/fhe/dap/patternsearch/model/: Data.java  Description.java  FHEFileSystem.java  ObjectProperty.java
src/main/java/fr/cea/bigpi/fhe/dap/patternsearch/model/analyticRequestPayload/: AnalyticRequestPayload.java  IaiMetadata.java  IaiParams.java  IaiResponse.java
src/main/java/fr/cea/bigpi/fhe/dap/patternsearch/repository/: DataRepository.java
src/main/java/fr/cea/bigpi/fhe/dap/patternsearch/service/: AnalysisServices.java  DataService.java  FHEPatternSearchService.java  FHEService.java  FilesStorageService.java  FilesStorageServiceImpl.java
src/main/java/fr/cea/bigpi/fhe/dap/patternsearch/tools/: BashTools.java
src/main/resources/: banner.txt
src/test/java/fr/cea/bigpi/fhe/repository/test/: SampleRepositoryTest.java
